--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="CV BUILD" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>CV BUILD</title>
+  <title>FORCOM GLOBAL RESOURCES</title>
 </head>
 
 <body>
